// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryConjunctionSwitch component Snapshot Test 1`] = `
<DocumentFragment>
  <div>
    <div
      class="toggleGroup"
    >
      <button
        class="toggleButton activeToggle btn btn-primary"
        type="button"
      >
        <span>
          AND
        </span>
      </button>
      <button
        class="toggleButton btn btn-primary"
        type="button"
      >
        <span>
          OR
        </span>
      </button>
    </div>
  </div>
  <div
    id="DndDescribedBy-0"
    style="display: none;"
  />
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-0"
    role="status"
    style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />
</DocumentFragment>
`;

exports[`QueryConjunctionSwitch component Snapshot Test 2`] = `
<DocumentFragment>
  <div>
    <div
      class="toggleGroup"
    >
      <button
        class="toggleButton btn btn-primary"
        type="button"
      >
        <span>
          AND
        </span>
      </button>
      <button
        class="toggleButton activeToggle btn btn-primary"
        type="button"
      >
        <span>
          OR
        </span>
      </button>
    </div>
  </div>
  <div
    id="DndDescribedBy-1"
    style="display: none;"
  />
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-1"
    role="status"
    style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />
</DocumentFragment>
`;
